# fedeegmz

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.local  README.md  package-lock.json  package.json  pyproject.toml
app/: main.py
app/context/domain/: action.py  contact.py  context.py  context_repository.py  project.py  status.py  technology.py
app/context/infrastructure/: di.py  gcp_context_repository.py  mongodb_context_repository.py
app/core/: settings.py
app/home/domain/: action.py  contact.py  context.py  context_repository.py  project.py  status.py
app/home/infrastructure/: di.py  home_router.py  in_memory_context_repository.py  mongodb_context_repository.py
app/project/application/: find_all.py
app/project/infrastructure/: di.py
app/shared/domain/: exceptions.py
app/shared/infrastructure/: exception_handler.py
img/: perfil.jpg:Zone.Identifier
public/: index.html
src/: App.css  App.js  desktop.css  index.html  index.js  style.css
src/assets/: main.js
src/assets/data/: bsaleairlineProjectData.js  shopsocialProjectData.js  wardProjectData.js  youtubePydanticModelsProjectData.js
src/assets/styles/: HomePage.scss  (+4 more)
src/components/: aboutMe.jsx  contact.jsx  mainApp.jsx  navbar.jsx  project.jsx  titles.jsx
src/info/: personal-info.json  projects.json
src/models/: projectInfo.class.js
src/pages/: HomePage.jsx
src/styles/: aboutMe.scss  contact.scss  project.scss
src/utils/: ageCalculator.js  copyClipboard.js
templates/: index.html
templates/components/: button.html  chip.html
(+17 files in other folders)
